# shapedemo

./: CMakeLists.txt
.github/workflows/: c-cpp.yml
include/: Rectangle.hpp  Shape.hpp  Triangle.hpp
src/: main.cpp
test/: catch_main.cpp
test/features/: rectangle.feature
test/features/steps/: rectangle.py
